--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,12 +20,22 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
-  background-color: #f4f4f4; 
-  background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 1px, transparent 1px),
-                    linear-gradient(rgba(0, 0, 0, 0.1) 1px, transparent 1px);
-  background-size: 20px 20px; 
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: 
+    linear-gradient(to right,#d8eafeb3, #ffffff), 
+    linear-gradient(#1f293730 1px, transparent 1px), 
+    linear-gradient(to right, #1f293730 1px, transparent 1px);
+  background-size: 100% 100%, 13px 13px, 13px 13px;
+  background-blend-mode: normal, multiply, multiply;
+  z-index: -1;
 }
+
 
 
 
