--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Iceland&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Iceland&display=swap");
 
 .iceland-font {
-  font-family: 'Iceland', sans-serif;
+  font-family: "Iceland", sans-serif;
 }
 
 @tailwind base;
@@ -33,11 +33,14 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: 
-    linear-gradient(to right,#b0d8febb, #ffffff), 
-    linear-gradient(#1f293740 1px, transparent 1px), 
+  background-image:
+    linear-gradient(to right, #b0d8febb, #ffffff),
+    linear-gradient(#1f293740 1px, transparent 1px),
     linear-gradient(to right, #1f293740 1px, transparent 1px);
-  background-size: 100% 100%, 13px 13px, 13px 13px;
+  background-size:
+    100% 100%,
+    13px 13px,
+    13px 13px;
   background-blend-mode: normal, multiply, multiply;
   z-index: -1;
 }
