feat(richtext): add basic link functionality and refactor error toast

--- a/src/components/RichText/RichText.css
+++ b/src/components/RichText/RichText.css
@@ -36,6 +36,11 @@
 .RichTextbox-link {
   color: rgb(33, 111, 219);
   text-decoration: none;
+  cursor: pointer;
+}
+.RichTextbox-link:hover {
+  text-decoration: underline;
+  color: rgb(33, 111, 219);
 }
 
 .tree-view-output {
