--- a/src/components/RichText/RichText.css
+++ b/src/components/RichText/RichText.css
@@ -217,8 +217,7 @@ pre::-webkit-scrollbar-thumb {
   margin-bottom: 1px;
   background: #fff;
   padding: 4px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-radius: 10px;
   vertical-align: middle;
 }
 
